# weather_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  Makefile  README.md  docker-compose.yml  pip.conf  pyproject.toml  requirements.txt
app/: __init__.py  add_city_to_graph.py  age_utils.py  apache_age_ops.py  backup_data.py  config.py  create_node_relationships.py  graph_nodes.py  ingest.py  location_resolver.py  main.py  orm_model.py  restore_from_backup.py  weather_fetcher.py
dags/: daily_data_backup.py
docker/init/: 01-create-airflow-db.sql  02-setup-age.sql
