[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather_api"
version = "1"
description = "Weather data ingestion and retrieval service with PostgreSQL storage."
readme = "README.md"
authors = [
  { name = "Austin", email = "austin@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"

keywords = ["weather", "forecast", "weather-gov", "postgres", "fastapi", "docker"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research"
]

dependencies = [
  "fastapi>=0.100.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "requests>=2.28.0,<3.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "psycopg[binary]>=3.1.0,<4.0.0",
  "geopy>=2.4.0,<3.0.0",
  "pandas>=2.0.0,<3.0.0",
  "pyarrow>=14.0.0,<18.0.0"
]

[project.urls]
Homepage = "https://github.com/austindatascientist/weather_api"
Documentation = "https://github.com/austindatascientist/weather_api#readme"
Source = "https://github.com/austindatascientist/weather_api"
Tracker = "https://github.com/austindatascientist/weather_api/issues"
